--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
 language: java
 jdk: oraclejdk8
-script:
-  - mvn clean test
-  - mvn clean test -f pom-1.7.xml
-  - mvn clean test -f pom-1.5.xml
+script: ./test-poms.sh
 install: mvn install -DskipTests=true -Dgpg.skip=true
