--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: java
 jdk: oraclejdk8
-script: ./test-poms.sh
+script: ./test-all-versions.sh
 install: mvn install -DskipTests=true -Dgpg.skip=true
